# accubet

./: .env.example  .gitattributes  .gitignore  Advanced Football Value Betting Int.txt  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
accubet/: __init__.py  cli.py  config.py  logging_setup.py
accubet/alerts/: __init__.py  telegram.py
accubet/api/: app.py
accubet/backtest/: __init__.py  calibration.py  metrics.py  walkforward.py
accubet/ingestion/: __init__.py  apifootball.py  cache.py  normalize.py  pipeline.py  quota.py
accubet/ingestion/scrapers/: __init__.py  base.py  betpawa.py  betway.py
accubet/market/: __init__.py  clv.py  comparison.py  consensus.py  efficiency.py  movement.py
accubet/models/: __init__.py  ensemble.py  form.py  goals_poisson.py  ml.py  predictor.py  ratings_glicko.py
accubet/static/: index.html
accubet/storage/: __init__.py  db.py  models.py
accubet/tracking/: __init__.py  performance.py  tracked_bets.py
accubet/value/: __init__.py  accumulator.py  ev.py  staking.py
config/: settings.yaml
docker/: healthcheck.py
scripts/: betway_discover.py  crontab  entrypoint.sh
tests/: test_alerts.py  test_backtest.py  test_betpawa.py  test_betway.py  test_calibration.py  test_consensus.py  test_ev.py  test_ml.py  test_models.py  test_predictor.py  test_tracking.py
